--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
                 <div class="navbar__items">
                     <ul class="items">
                         <li class="item"><a href=""></a>Features <img src="./img/Path 5.svg" alt=""></li>
+                        <div class="item__dropdown">
+                                <ul class="dropdown__list">
+                                    <li><img src="./img/List.svg" alt="">Todo List</li>
+                                    <li><img src="./img/calendar.svg" alt="">Calendar</li>
+                                    <li><img src="./img/Bell.svg" alt="">Reminders</li>
+                                    <li><img src="./img/planning.svg" alt="">Planning</li>
+                                </ul>
+                        </div>
                         <li class="item"><a href=""></a>Company <img src="./img/Path 5.svg" alt=""></li>
+                        <div class="item__dropdown item__dropdown--company">
+                            <ul class="dropdown__list">
+                                <li>History</li>
+                                <li>Our Team</li>
+                                <li>Blog</li>
+                            </ul>
+                        </div>
                         <li class="item"><a href=""></a>Careers</li>
                         <li class="item"><a href=""></a>About</li>
                     </ul>
