hero section finished

--- a/index.html
+++ b/index.html
@@ -20,28 +20,23 @@
                 <div class="navbar__items">
                     <ul class="items">
 
-
                         <div class="dropdown">
                             <li class="dropdown-item item"><a href=""></a>Features <img class="arrow-icon" src="./img/Path5.svg" alt=""></li>
                             <div class="dropdown-content">
-                                <li><a href="#"><img src="./img/List.svg" alt=""> Todo List</a></li>
-                                <li><a href="#"><img src="./img/calendar.svg" alt=""> Calendar</a></li>
-                                <li><a href="#"><img src="./img/Bell.svg" alt=""> Reminders</a></li>
-                                <li><a href="#"><img src="./img/planning.svg" alt=""> Planning</a></li>
+                                <li><a class="dropdown__link" href="#"><img class="dropdown__img" src="./img/List.svg" alt=""> Todo List</a></li>
+                                <li><a class="dropdown__link" href="#"><img class="dropdown__img" src="./img/calendar.svg" alt=""> Calendar</a></li>
+                                <li><a class="dropdown__link" href="#"><img class="dropdown__img" src="./img/Bell.svg" alt=""> Reminders</a></li>
+                                <li><a class="dropdown__link" href="#"><img class="dropdown__img" src="./img/planning.svg" alt=""> Planning</a></li>
                             </div>
                         </div>
                         <div class="dropdown">
                             <li class="dropdown-item item"><a href=""></a>Company <img class="arrow-icon" src="./img/Path5.svg" alt=""></li>
                             <div class="dropdown-content dropdown-content--company">
-                                <li><a href="#">History</a></li>
-                                <li><a href="#">Our Team</a></li>
-                                <li><a href="#">Blog</a></li>
+                                <li><a class="dropdown__link" href="#">History</a></li>
+                                <li><a class="dropdown__link" href="#">Our Team</a></li>
+                                <li><a class="dropdown__link" href="#">Blog</a></li>
                             </div>
                         </div>
-                        
-                        
-
-
 
                         <li class="item"><a href=""></a>Careers</li>
                         <li class="item"><a href=""></a>About</li>
@@ -57,7 +52,24 @@
 
 
         <div class="hero">
+            <div class="hero__description">
+                <div class="hero__texts">
+                    <h1 class="hero__title">Make remote work</h1>
+                    <p class="hero__paragraph">Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>
+                    <button class="button button--black">Learn more</button>
+                </div>
+                <div class="hero__icons">
+                    <img src="./img/databiz.svg" alt="">
+                    <img src="./img/Union.svg" alt="">
+                    <img src="./img/meet.svg" alt="">
+                    <img src="./img/maker.svg" alt="">
+                </div>
+            </div>
+            <div class="hero__img">
+                <img src="./img/heroImg.svg" alt="">
+            </div>
         </div>
+
     </div>
 
     <script src="./dropdown.js"></script>
