adjustments and corrections in mobile view

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="hero__img">
-                <img class="img-desktop" srcset="./img/img-hero-desktop.svg" alt="">
+                <img class="img-desktop" src="./img/img-hero-desktop.svg" alt="">
                 <img class="img-mobile" src="./img/img-hero-mobile.svg" alt="">
             </div>
         </div>
